--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,6 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "type": "module",
   "scripts": {
@@ -14,8 +13,10 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mongoose": "^5.11.18",
+    "mongoose": "^5.12.6",
     "nodemon": "^2.0.7",
     "react-router-dom": "^5.2.0"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
